Cleaned some things up and added some comments.

--- a/MarkdownViewer/Resources/HTML_TEMPLATE.html
+++ b/MarkdownViewer/Resources/HTML_TEMPLATE.html
@@ -68,7 +68,7 @@
     <script src="scripts\shCore.js"></script>
     <script src="scripts\shAutoloader.js"></script>
     <script src="scripts\simplemde.min.js"></script>
-    <script>controller.showDevTools(); window.loadBrushes = function () { SyntaxHighlighter.autoloader('{{{SYNTAX_AUTOLOADER}}}'); };</script>
+    <script>window.loadBrushes = function () { SyntaxHighlighter.autoloader('{{{SYNTAX_AUTOLOADER}}}'); };</script>
     <script src="scripts\app.js"></script>
 </body>
 </html>
