--- a/MarkdownViewer/Resources/HTML_TEMPLATE.html
+++ b/MarkdownViewer/Resources/HTML_TEMPLATE.html
@@ -51,10 +51,16 @@
     <div id="divMain" class="container">
         <div class="row">
             <div class='col-xs-12' id="divContent">
-                <p class="bg-info">
-                    <h3 class="text-muted">
-                        <i class="fa fa-cogs"></i> &nbsp;... just give us a sec ... we're loading ...
-                    </h3>
+                <p id="pNoFile" class="bg-info">
+                    <h1 class="text-muted">
+                        Welcome to the Markdown Viewer!
+                        <br />
+                        <br />
+                        <a role="presentation" id="btnOpenMarkdown2" class="btn btn-primary">
+                            <i class="fa fa-folder-open-o" title="Open Markdown File"></i>
+                            Open Markdown File
+                        </a>
+                    </h1>
                 </p>
             </div>
         </div>
