Started work on adding find functionality

--- a/MarkdownViewer/Resources/HTML_TEMPLATE.html
+++ b/MarkdownViewer/Resources/HTML_TEMPLATE.html
@@ -21,22 +21,25 @@
             <div class="navbar-text" id="h4MdPath"></div>
             <ul class="nav navbar-nav navbar-right nav-pills">
                 <li>
-                    <a role="presentation" id="btnOpenMarkdown"><i class="fa fa-folder-open" title="Open Markdown File"></i> Open</a>
+                    <a role="presentation" id="btnOpenMarkdown"><i class="fa fa-folder-open-o" title="Open Markdown File"></i></a>
                 </li>
                 <li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-floppy-o"></i> Save As
+                        <i class="fa fa-floppy-o"></i>
                     </a>
                     <ul class="dropdown-menu">
                         <li><a id="btnSaveAsPDF">Save as PDF</a></li>
                         <li><a id="btnSaveAsHtml">Save as HTML</a></li>
                         <li><a id="btnSaveAsMarkdown">Save as Markdown</a></li>
                     </ul>
+                </li>                
+                <li>
+                    <a role="presentation" id="btnFind"><i class="fa fa-search" title="Find text in file"></i></a>
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-gear"></i> Dev
+                        <i class="fa fa-gear"></i>
                     </a>
                     <ul class="dropdown-menu">
                         <li><a id="btnShowDevTools">Open Dev-Tools</a></li>
