--- a/MarkdownViewer/Resources/HTML_TEMPLATE.html
+++ b/MarkdownViewer/Resources/HTML_TEMPLATE.html
@@ -33,9 +33,9 @@
                         <li><a id="btnSaveAsHtml">Save as HTML</a></li>
                         <li><a id="btnSaveAsMarkdown">Save as Markdown</a></li>
                     </ul>
-                </li>                
+                </li>
                 <li>
-                    <a role="presentation" id="btnFind"><i class="fa fa-search" title="Find text in file"></i></a>
+                    <a id="btnFind" role="presentation" title="Find text in file"><i class="fa fa-search"></i></a>
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
