Dealt with opening new file while in edit mode. Fixed issue with transition from side-by-side editing to preview.

--- a/MarkdownViewer/Resources/HTML_TEMPLATE.html
+++ b/MarkdownViewer/Resources/HTML_TEMPLATE.html
@@ -21,7 +21,7 @@
             <div class="navbar-text" id="h4MdPath"></div>
             <ul class="nav navbar-nav navbar-right nav-pills">
                 <li>
-                    <a role="presentation" id="btnOpenMarkdown"><i class="fa fa-folder-open-o" title="Open Markdown File"></i></a>
+                    <a role="presentation" class="btnOpenMarkdown"><i class="fa fa-folder-open-o" title="Open Markdown File"></i></a>
                 </li>
                 <li>
                 <li class="dropdown">
@@ -58,7 +58,7 @@
                     <h1 class="text-muted">
                         Welcome to the Markdown Viewer!
                     </h1>
-                    <a role="presentation" id="btnOpenMarkdown2" class="btn btn-primary">
+                    <a role="presentation" class="btn btn-primary btnOpenMarkdown">
                         <i class="fa fa-folder-open-o" title="Open Markdown File"></i>
                         Open Markdown File
                     </a>
