--- a/MarkdownViewer/Resources/HTML_TEMPLATE.html
+++ b/MarkdownViewer/Resources/HTML_TEMPLATE.html
@@ -69,25 +69,19 @@
                 </p>
             </div>
         </div>
-    </div>
-    <div id="divAlert" class="alert alert-dismissible" role="alert">
-        <button type="button" class="close" aria-label="Close" id="btnCloseAlert"><span aria-hidden="true">&times;</span></button>
-        <div id="divAlertMessage"></div>
-    </div>
-    <div id="divConfirm" class="modal fade" tabindex="-1" role="dialog">
+    </div>    
+    <div id="divAlert" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 id="divConfirmTitle" class="modal-title">Modal title</h4>
+                    <h4 class="modal-title"></h4>
                 </div>
                 <div class="modal-body">
-                    <p id="pConfirmBody">One fine body&hellip;</p>
+                    <p id="divAlertMessage">One fine body&hellip;</p>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" id="btnConfirmCancel" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" id="btnConfirmYes" class="btn btn-primary" data-dismiss="modal">Yes</button>
-                    <button type="button" id="btnConfirmNo" class="btn btn-warning" data-dismiss="modal">No</button>
+                <div class="modal-footer">                    
+                    <button type="button" data-dismiss="modal" aria-label="Close" class="btn btn-primary btn-lg">Close</button>                    
                 </div>
             </div>
         </div>
